cluster-configs/demo-traefik/backend-hello-kubernetes/610-backend-hello-kubernetes-ingressRoute-websecure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind:       IngressRoute
metadata:
  # name:     hello-kubernetes-web-tls
  name:     hello-kubernetes-websecure
spec:
  entryPoints:
    - websecure
  tls:
    certResolver:   le
  routes:
  - kind:       Rule
    match:      Host(`localhost`) && PathPrefix(`/hello`)
    services:
    - name:     backend-hello-kubernetes-svc
      port:     80
